# AutoDyff

./: .env  README.md  convert.py  editor.html  isp.py  live_preview.py  mathquill.html  multiditest.py  parenthesis_test.py  pyproject.toml  run_tests.txt  test.py
.github/: CODEOWNERS
AndroidApp/: local.properties  settings.gradle.kts
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/: serverRequestTest.java
AndroidApp/app/src/main/res/layout/: about_fragment.xml  activity_main.xml  demo_fragment.xml  (+3 more)
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
CalCoolUs/: error_types.py  log_init.py  numerical_engine.py  preprocess.py
CalCoolUs/ops/: add.py  arccos.py  arccot.py  arccsc.py  arcsec.py  arcsin.py  arctan.py  const.py  cos.py  cosh.py  cot.py  csc.py  div.py  ln.py  log.py  mul.py  op.py  op_types.py  pow.py  sec.py  sigmoid.py  sin.py  sinh.py  sqrt.py  sub.py  tan.py  tanh.py  var.py
CalCoolUs/server/: __init__.py  server.py
CalCoolUs/server/static/: equation-editor.js  script.js  style.css
CalCoolUs/server/templates/: boohoo.html  equation-collector.html  index.html  indexGINGERBAK.html  indexOG.html
Flask/: server.py
Flask/templates/: index.html
TEST/: main.py
TEST/templates/: index.html
iOS_App/: post_request.swift
iOS_App/CalCoolUs_Calculator/: CalCoolUs_CalculatorApp.swift  ContentView.swift
iOS_App/CalCoolUs_Calculator.xcodeproj/: project.pbxproj
tests/: test_basic.py  test_diff.py  test_errorcatcher.py  test_latex.py  test_postfix.py  test_solver.py
(+23 files in other folders)
